--- a/css/global/header.css
+++ b/css/global/header.css
@@ -8,18 +8,14 @@
   gap: 20px;
   justify-content: space-between;
   align-items: center;
-  box-sizing: border-box;
-  padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .header-menu {
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
-  font-size: 18px;
-  line-height: 32px;
 }
 
 .header-menu a {
@@ -27,8 +23,6 @@
   display: inline-block;
   padding: 16px 0px;
   position: relative;
-  font-family: "Poppins";
-  font-weight: 400;
 }
 
 .header-menu a::after {
