--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,3 +1,12 @@
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .botao {
   display: inline-block;
   background: linear-gradient(#ffbf00, #f2a50c);
@@ -5,10 +14,7 @@
   color: var(--cor-p5);
   padding: 16px 32px;
   border-radius: 4px;
-  font-family: "Poppins";
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 1.33;
+  font: 600 1.125rem/1.35 "Poppins", sans-serif;
   text-transform: uppercase;
 }
 
@@ -19,6 +25,6 @@
 @media (max-width: 600px) {
   .botao {
     padding: 12px 16px;
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
