--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -28,3 +28,22 @@
     font-size: 1rem;
   }
 }
+
+.link {
+  display: inline-block;
+  color: var(--cor-p1);
+  font: 500 1.5rem/1.5 "Poppins", sans-serif;
+  text-transform: uppercase;
+}
+
+.link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor; /*essa propriedade sempre vai pegar a cor do elemento pai (ou seja a cor que declarei em link) Trocando no pai, automaticamente troca no filho */
+}
+
+.link:hover {
+  color: var(--cor-0);
+}
