--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -12,6 +12,10 @@
   align-items: center;
 }
 
+#seguros .seguros {
+  padding-top: 0px;
+}
+
 .seguros h2 {
   grid-column: 1/-1;
 }
@@ -21,6 +25,7 @@
   padding: 32px 32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 4px;
 } /* Eu vou ter um "fr", que vai ser aqui, que vai crescer infinitamente. E essa última aqui, eu vou colocar de automática. Ela vai ter, então, sempre o tamanho máximo do tamanho do conteúdo que estiver aqui, que é bem pequenininho, porque é só o preço. Eu vou colocar "1fr auto". */
 
 .seguros-item h3 {
