--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -15,12 +15,14 @@
 
 .contato-dados {
   border-radius: 5px 0 0 5px;
-  background: var(--cor-12);
+  background: var(--cor-12) url("../../img/dec/bottom-left.svg") no-repeat
+    bottom 20px left 20px;
 }
 
 .contato-formulario {
   border-radius: 0 5px 5px 0;
-  background: var(--cor-0);
+  background: var(--cor-0) url("../../img/dec/bottom-right.svg") no-repeat
+    bottom 20px right 20px;
 }
 
 .contato-dados h2 {
@@ -33,7 +35,7 @@
   background: url("../../img/icones/local.svg") no-repeat 0px 2px;
 }
 
-.contato-dados p {
+.contato-endereco p {
   margin-bottom: 8px;
 }
 
@@ -71,25 +73,21 @@
   .contato {
     grid-template-columns: 1fr;
   }
-
   .contato-dados,
   .contato-formulario {
     padding: 20px;
   }
-
   .contato-dados {
     border-radius: 5px 5px 0 0;
+    background: var(--cor-12);
   }
-
   .contato-formulario {
     border-radius: 0 0 5px 5px;
   }
-
   .contato-dados h2,
   .contato-meios a:nth-child(3) {
     margin-bottom: 32px;
   }
-
   .contato-redes {
     margin-bottom: 12px;
   }
